implemented the interface and transferred some of the methods from the main class. Also got the check winner functionality to work when playing against the CPU